add "epochs" to the string

--- a/train.ipynb
+++ b/train.ipynb
@@ -797,7 +797,7 @@
         "    epochs_left = (epochs - cur_epoch) + 1    # current epoch also have to run\n",
         "    predicted_training_duration = epochs_left * duration_for_one_epoch\n",
         "    print(f\"{'-'*16}\")\n",
-        "    text = f\"Training will need about following time for {epochs_left}:\"\n",
+        "    text = f\"Training will need about following time for {epochs_left} epochs:\"\n",
         "    print_time_information(start=epoch_start, total_seconds=predicted_training_duration, text=text)\n",
         "    print(f\"{'-'*16}\")"
       ]
