--- a/train_V4.ipynb
+++ b/train_V4.ipynb
@@ -1559,12 +1559,12 @@
         "ax.grid()"
       ],
       "metadata": {
-        "id": "atJ7S98hkxPv",
-        "outputId": "e024647e-f8ad-4170-d8d6-1be193864d28",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 476
-        }
+        },
+        "id": "atJ7S98hkxPv",
+        "outputId": "e024647e-f8ad-4170-d8d6-1be193864d28"
       },
       "execution_count": 52,
       "outputs": [
@@ -1610,12 +1610,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "hHQkbfDfmJqv",
-        "outputId": "48612f1d-d475-4c2b-8c62-ff6da8adccf4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 478
-        }
+        },
+        "id": "hHQkbfDfmJqv",
+        "outputId": "48612f1d-d475-4c2b-8c62-ff6da8adccf4"
       },
       "execution_count": 53,
       "outputs": [
@@ -1694,6 +1694,30 @@
         "# model = torch.load(MODEL_PATH)\n",
         "# model.eval()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "save in Google Drive"
+      ],
+      "metadata": {
+        "id": "WgWcVcIhtQ73"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/gdrive')\n",
+        "\n",
+        "# path = \"/content/gdrive/My Drive/model.pt\"\n",
+        "# torch.save(model.state_dict(), path)"
+      ],
+      "metadata": {
+        "id": "idmgWLSotQlC"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
