--- a/data_generation.ipynb
+++ b/data_generation.ipynb
@@ -266,12 +266,12 @@
    "source": [
     "# load pickle files (logs)\n",
     "try:\n",
-    "    executed_commands = load_pickle(\"executed_commands_V4\")\n",
+    "    executed_commands = load_pickle(\"executed_commands_calm_bot\")\n",
     "except Exception:\n",
     "    executed_commands = dict()\n",
     "\n",
     "try:\n",
-    "    information = load_pickle(\"information_V4\")\n",
+    "    information = load_pickle(\"information_calm_bot\")\n",
     "except Exception:\n",
     "    information = dict()"
    ]
@@ -4534,7 +4534,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    information = load_pickle(\"information_V4\")\n",
+    "    information = load_pickle(\"information_calm_bot\")\n",
     "except Exception:\n",
     "    raise ValueError(\"No Log Files Yet!\")"
    ]
@@ -4674,7 +4674,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    executed_commands = load_pickle(\"executed_commands_V4\")\n",
+    "    executed_commands = load_pickle(\"executed_commands_calm_bot\")\n",
     "except Exception:\n",
     "    raise ValueError(\"No Log Files Yet!\")"
    ]
