--- a/data_generation_stories.ipynb
+++ b/data_generation_stories.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,12 +266,12 @@
    "source": [
     "# load pickle files (logs)\n",
     "try:\n",
-    "    executed_commands = load_pickle(\"executed_commands\")\n",
+    "    executed_commands = load_pickle(\"executed_commands_stories\")\n",
     "except Exception:\n",
     "    executed_commands = dict()\n",
     "\n",
     "try:\n",
-    "    information = load_pickle(\"information\")\n",
+    "    information = load_pickle(\"information_stories\")\n",
     "except Exception:\n",
     "    information = dict()"
    ]
@@ -448,19 +448,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
-    "    information = load_pickle(\"information\")\n",
+    "    information = load_pickle(\"information_stories\")\n",
     "except Exception:\n",
     "    raise ValueError(\"No Log Files Yet!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -567,12 +567,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
-    "    executed_commands = load_pickle(\"executed_commands\")\n",
+    "    executed_commands = load_pickle(\"executed_commands_stories\")\n",
     "except Exception:\n",
     "    raise ValueError(\"No Log Files Yet!\")"
    ]
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -4157,7 +4157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
