--- a/train_refinetuning.ipynb
+++ b/train_refinetuning.ipynb
@@ -341,23 +341,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "MrZaWIOKXoUd"
       },
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'transformers'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[2], line 11\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdatetime\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m datetime \u001b[38;5;28;01mas\u001b[39;00m dt\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjson\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtransformers\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DataLoader, Dataset\n",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'transformers'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#from transformers import GPT2Tokenizer, GPT2LMHeadModel\n",
         "import numpy as np\n",
@@ -421,7 +409,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -469,7 +457,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 3,
       "metadata": {
         "id": "VFiQ05wnXoUd"
       },
@@ -588,7 +576,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -598,24 +586,12 @@
       },
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/huggingface_hub/utils/_token.py:72: UserWarning: \n",
-            "The secret `HF_TOKEN` does not exist in your Colab secrets.\n",
-            "To authenticate with the Hugging Face Hub, create a token in your settings tab (https://huggingface.co/settings/tokens), set it as secret in your Google Colab and restart your session.\n",
-            "You will be able to reuse this secret in all of your notebooks.\n",
-            "Please note that authentication is recommended but still optional to access public models or datasets.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
           "data": {
             "text/plain": [
               "1"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -630,14 +606,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 5,
       "metadata": {
         "id": "r2qOzeAAXoUe"
       },
       "outputs": [],
       "source": [
         "data = Dialog_Data(tokenizer=tokenizer, data_dir_path=[\"./data_stories\", \"./data_calm_bot\", \"./data\"],\n",
-        "                    read_one_file=False, should_save_as_one_file=True)\n",
+        "                    read_one_file=True, should_save_as_one_file=True)\n",
         "data = DataLoader(data, batch_size=4, shuffle=True)"
       ]
     },
@@ -762,7 +738,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -774,10 +750,10 @@
         {
           "data": {
             "text/plain": [
-              "11149"
+              "36341"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1593,7 +1569,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.1"
+      "version": "3.9.1"
     }
   },
   "nbformat": 4,
